--- a/Pagina-Loja-Informatica-HTML/index.html
+++ b/Pagina-Loja-Informatica-HTML/index.html
@@ -45,8 +45,8 @@
             
 
             <div class="texto-banner">
-                <p>Confiabilidade e segurança</p> 
-                <p>Profissionais qualificados</p>  
+                <p>Turbine seu pc</p> 
+                <p>Com a empresa que tem a</p>  
                 <p>Melhor avaliação do mercado</p>
 
 
