--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Loja de informática localizada em Ji-Paraná - RO">
     <meta name="keywords" content="loja, informática, hardware, software">
     <link rel="stylesheet" href="css/style.css">
+
     <title>Loja de Informática</title>
 
     
@@ -45,7 +46,7 @@
             
 
             <div class="texto-banner">
-                <p>Turbine seu pc</p> 
+                <p>Turbine seu PC</p> 
                 <p>Com a empresa que tem a</p>  
                 <p>Melhor avaliação do mercado</p>
 
@@ -160,7 +161,7 @@
                 </tr>
                 <tr>
                     <td>HD 1TB</td>
-                    <td>Western Digitl</td>
+                    <td>Western Digital</td>
                     <td>R$250,00</td>
                 </tr>
                 <tr>
