criação form "cadastro"

--- a/pages/faleConosco.html
+++ b/pages/faleConosco.html
@@ -23,7 +23,7 @@
 
     <main class="pag-form">
 
-        <h2 id="titulo-form">Contate-nos</h2>
+        <h2 class="titulo-form">Contate-nos</h2>
 
         <form action="envio_mensagem.php" method="get" id="form-fale-conosco" class="formulario">
 
