--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="links">
             
             <a href="#">Home</a>
-            <a>Cadastro</a>
+            <a href="pages/cadastro.html">Cadastro</a>
             <a href="https://github.com/GabrielOlisil/Pagina-Loja-Informatica-HTML" target="_blank">Open Source</a>
             <a href="pages/faleConosco.html">Fale conosco</a>
         </div>
