--- a/pages/faleConosco.html
+++ b/pages/faleConosco.html
@@ -14,7 +14,7 @@
         
         <div class="links">
             <a href="../index.html">Home</a>
-            <a>Cadastro</a>
+            <a href="cadastro.html">Cadastro</a>
             <a href="https://github.com/GabrielOlisil/Pagina-Loja-Informatica-HTML" target="_blank">Open Source</a>
             <a href="#">Fale conosco</a>
         </div>        
