--- a/index.html
+++ b/index.html
@@ -18,31 +18,30 @@
 <body>
 
     <header>
+        <div class="area-segura">
 
-        <div class="Logomarca">
-            <a href="index.html"><img class="logo-short" src="Imagens/logo-invertida.png" alt="logomarca"></a>
-
-        </div>
-
-        <h1>Gabriel Informática</h1>
-
-        <nav>
-            <a href="index.html">Pagina inicial</a>
-            <a href="pages/cadastro.html">Cadastro</a>
-            <a href="pages/faleConosco.html">Fale conosco</a>
-
-        </nav>
-
-        <nav class="responsiva">
-
-            <img src="Imagens/menu-icon.svg" alt="menu bar" class="img-short">
-            <nav class="backdrop">
+            <div class="Logomarca">
+                <a href="index.html"><img class="logo-short" src="Imagens/logo-invertida.png" alt="logomarca"></a>
+            </div>
+            <h1>Gabriel Informática</h1>
+            <nav>
                 <a href="index.html">Pagina inicial</a>
                 <a href="pages/cadastro.html">Cadastro</a>
                 <a href="pages/faleConosco.html">Fale conosco</a>
-
             </nav>
-        </nav>
+            <nav class="responsiva">
+
+
+                <img src="Imagens/menu-icon.svg" alt="menu bar" class="img-short">
+
+
+                <nav class="backdrop">
+                    <a href="index.html">Pagina inicial</a>
+                    <a href="pages/cadastro.html">Cadastro</a>
+                    <a href="pages/faleConosco.html">Fale conosco</a>
+                </nav>
+            </nav>
+        </div>
 
     </header>
 
